--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,29 +13,10 @@ label {
 	margin: 10px;
 }
 .colOne {
-	background-color: white;
+	background-color: #ffffff;
 }
 .colTwo {
-	background-color: rgb(255, 255, 255);
-}
-.histBtnRow {
-	margin-top: 5px;
-	margin-bottom: 5px;
-}
-.green{
-  background-color: lightgreen;
-}
-.yellow{
-  background-color: yellow;
-}
-.orange{
-  background-color: orange;
-}
-.red{
-  background-color: red;
-}
-.purple{
-  background-color: purple;
+	background-color: #ffffff;
 }
 .icons {
 	height: 70px;
